<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Vocabulary Note</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="str_definition">Definition</string>
    <string name="str_example">Example</string>
    <string name="str_button_add">Add</string>
    <string name="str_btn_save">Save</string>
    <string name="str_btn_edit">Edit</string>
    <string name="title_create_new">New</string>
    <string name="title_search">Search</string>

    <string-array name="spinner_type">
        <item>noun</item>
        <item>verb</item>
        <item>adjective</item>
        <item>adverb</item>
        <item>phrasal verb</item>
        <item>preposition</item>
        <item>idiom</item>
        <item>collocation</item>
    </string-array>
    <string-array name="sort_condition">
        <item>A to Z</item>
        <item>Z to A</item>
        <item>Oldest first</item>
        <item>Newest first</item>
    </string-array>

    <string name="str_action_bar_save">SAVE</string>
    <string name="str_action_sort">Sort</string>
    <string name="str_action_filter">Filter</string>
    <string name="str_action_export">Export&#8230;</string>
    <string name="str_action_import">Import&#8230;</string>
    <string name="str_action_bar_edit">EDIT</string>
    <string name="str_action_bar_delete">DELETE</string>
    <string name="str_type">Type</string>
    <string name="str_label_new_word">New word</string>
    <string name="str_label_word_detail">Details</string>
    <string name="str_label_word_edit">Edit</string>
    <string name="title_activity_web_viewer">Online Dictionary</string>
    <string name="str_online_search">Online search</string>
    <string name="str_btn_pronounce">Pronounce</string>
    <string name="title_activity_flash_card">Flash Card</string>
    <string name="str_action_flash_card">Flash card</string>
    <string name="str_action_bar_refresh">Refresh</string>
    <string name="str_unavailable">No content available</string>
    <string name="str_new_word_hint">Enter new word</string>
    <string name="str_definition_hint">Enter definition</string>
    <string name="str_example_hint">Enter example</string>
    <string name="str_flash_card_retry_button_decs">Tap here to start over</string>
    <string name="str_context_delete">Delete</string>
    <string name="str_instruct_msg">Press \"+\" to add your new vocabulary</string>
    <string name="str_action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
<!-- Preference strings & arrays -->
<string name="str_pref_dictionary_title">Dictionary</string>
<string name="str_pref_dictionary_summary">Manage which online dictionary you would like to use</string>
<string name="str_pref_dlgTitle">Select a dictionary</string>
<string name="str_pref_wifiOnly_title">Wi-Fi Only</string>
<string name="str_pref_wofiOnly_summary">Look up words over Wi-Fi only</string>
<string name="str_pref_default_value">null</string>
<string-array name="pref_dictionary_entries">
     <item>Longman dictionary</item>
     <item>Merriam-Webster dictionary</item>
     <item>Ask user</item>
</string-array>
<string-array name="dictionary_entries">
     <item>Longman dictionary</item>
     <item>Merriam-Webster dictionary</item>
</string-array>
<string-array name="pref_dictionary_values">
     <item>http://www.ldoceonline.com/search/?q=</item>
     <item>http://www.merriam-webster.com/dictionary/</item>
     <item>null</item>
</string-array>

</resources>