<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" 
    xmlns:vocabnote="http://schemas.android.com/apk/res-auto" >
   
    <item
        android:id="@+id/action_new_word"
        android:icon="@drawable/ic_action_new"
        android:title="@string/title_create_new"
        vocabnote:showAsAction="always" />
    <item
        android:id="@+id/action_sort"
        android:title="@string/str_action_sort"
        android:showAsAction="never" /> 
    <item
        android:id="@+id/action_filter"
        android:title="@string/str_action_filter"
        android:showAsAction="never" />
      
    <item
        android:id="@+id/action_flash_card"
        android:title="@string/str_action_flash_card" 
        android:showAsAction="never" />
    
    <item
        android:id="@+id/action_settings"
        android:title="@string/str_action_settings" 
        android:showAsAction="never" />
</menu>