<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollview_01"
     android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
 	<RelativeLayout
 	    android:layout_width="match_parent"
 	    android:layout_height="wrap_content"
 	    android:orientation="vertical"
 	    android:gravity="center"
 	    android:paddingTop="10dp"
 	    android:paddingBottom="10dp"
 	    android:layout_marginBottom="30dp"
 	    android:background="#e4e5e5" >
	    <EditText 
	        android:layout_width="200dp"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:inputType="textCapSentences"
	        android:hint="@string/str_new_word_hint"
	        android:id="@+id/et_word" ><requestFocus/></EditText>
	    <ImageButton
	       android:id="@+id/btn_Web"
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content"
	       android:layout_toRightOf="@id/et_word"
	       android:layout_marginLeft="5dp"
	       android:src="@drawable/ic_action_search"
	       android:background="@null"
	       android:contentDescription="@string/str_online_search"/>
    </RelativeLayout>
  
     <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:textAppearance="@style/AppBaseTheme.LabelText"
        android:text="@string/str_type"/>
      <Spinner 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="20dp"
        android:id="@+id/spinner_type"/>
      
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:textAppearance="@style/AppBaseTheme.LabelText"
        android:text="@string/str_definition"/>
      <EditText
        android:layout_width="match_parent" 
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="20dp"
        android:inputType="textCapSentences"
        android:id="@+id/et_definition" />
   
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:textAppearance="@style/AppBaseTheme.LabelText"
        android:text="@string/str_example"/>
      <EditText
        android:layout_width="match_parent" 
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="20dp"
        android:inputType="textCapSentences"
        android:id="@+id/et_example"/>
     
</LinearLayout>
</ScrollView>
