<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
 	<RelativeLayout
 	    android:layout_width="match_parent"
 	    android:layout_height="wrap_content"
 	    android:orientation="vertical"
 	    android:paddingTop="10dp"
 	    android:paddingBottom="10dp"
 	    android:layout_marginBottom="30dp"
 	    android:background="#e4e5e5" >
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:layout_centerHorizontal="true"
	        android:textSize="18sp"
	        android:id="@+id/tv_word"/>
	     
	    <TextView 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/tv_word"
	      	android:gravity="center"
	        android:textColor="#676767"
	        android:textStyle="italic"
	        android:id="@+id/tv_word_type"/>
	    
	     <ImageButton
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_toRightOf="@id/tv_word"
	        android:layout_marginLeft="10dp"
	        android:src="@drawable/speaking_icon"
	        android:background="@null"
	        android:contentDescription="@string/str_btn_pronounce"
	        android:id="@+id/btn_pronounce"/>
	 
	     
    </RelativeLayout>
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:textAppearance="@style/AppBaseTheme.LabelText"
        android:visibility="invisible"
        android:text="@string/str_definition"
        android:id="@+id/label_definition"/>
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="25dp"
        android:paddingRight="10dp"
        android:layout_marginBottom="20dp"
        android:id="@+id/tv_definition"/>
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:textAppearance="@style/AppBaseTheme.LabelText"
        android:visibility="invisible"
        android:text="@string/str_example"
        android:id="@+id/label_example"/>
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="25dp"
        android:paddingRight="10dp"
        android:layout_marginBottom="20dp"
        android:id="@+id/tv_example"/>
	 <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/AppBaseTheme.InformationText"
        android:visibility="invisible"
        android:text="@string/str_unavailable"
        android:id="@+id/label_information"/>
</LinearLayout>